--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
+  --font-nunito-sans: var(--font-nunito-sans);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -44,6 +45,7 @@
 }
 
 :root {
+  --font-nunito-sans: "Nunito Sans", sans-serif;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.129 0.042 264.695);
@@ -76,6 +78,10 @@
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
+  --table-header: oklch(0.98 0.005 240);
+  --table-row: oklch(1 0 0);
+  --table-row-alt: oklch(0.99 0.003 240);
+  --table-border: oklch(0.91 0.01 240);
 }
 
 .dark {
@@ -110,13 +116,34 @@
   --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.551 0.027 264.364);
+  --table-header: 217.2 32.6% 17.5%;
+  --table-row: 222.2 84% 4.9%;
+  --table-row-alt: 222.2 84% 6.5%;
+  --table-border: 217.2 32.6% 17.5%;
 }
 
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  .data-table th {
+    @apply text-left py-3 px-4 font-normal transition-all duration-200  text-muted-foreground text-sm tracking-wide;
+  }
+
+  .data-table td {
+    @apply py-3 px-4 border-t transition-all duration-200;
+  }
+
+  .data-table tr {
+    @apply transition-colors duration-200 hover:bg-secondary/40;
+  }
+
+  .data-table-sortable {
+    @apply cursor-pointer hover:text-foreground;
   }
 }
